<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_video_library_24"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_loc"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_number4"
            android:icon="@drawable/ic_number"
            android:title="@string/menu_number4" />
        <item
            android:id="@+id/nav_report5"
            android:icon="@drawable/ic_call"
            android:title="@string/menu_report5" />
        <item
            android:id="@+id/nav_connection6"
            android:icon="@drawable/ic_d"
            android:title="@string/menu_connection6" />
    </group>
</menu>