<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_number4"
        android:name="com.moon.skywatch.ui.number4.number4Fragment"
        android:label="@string/menu_number4"
        tools:layout="@layout/fragment_number4" />
    <fragment
        android:id="@+id/nav_report5"
        android:name="com.moon.skywatch.ui.report5.report5Fragment"
        android:label="@string/menu_report5"
        tools:layout="@layout/fragment_report5" />
    <fragment
        android:id="@+id/nav_connection6"
        android:name="com.moon.skywatch.ui.connection6.connection6Fragment"
        android:label="@string/menu_connection6"
        tools:layout="@layout/fragment_connection6" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.moon.skywatch.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.moon.skywatch.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.moon.skywatch.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>